added translateMany & more examples

--- a/ExampleApp/src/main/res/values/strings.xml
+++ b/ExampleApp/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">ExampleApp</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_example_uitranslations">ExampleUITranslationsActivity</string>
 
 </resources>
